correccion de scroll infinito

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,8 +26,9 @@ import "../styles/global.css";
 
 <style>
   body {
-    min-height: 100vh;
+    min-height: calc(100vh + 400px);
     overflow-x: hidden;
-    background-color:var(--light);
+    overflow-y: scroll;
+    background-color: var(--light);
   }
 </style>
