--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Wrapper from "../components/Wrapper.astro";
   <section class="sec" id="start">
      <div class="grid col-2 sm-col-1 container middle">
 	   <div class="img">
-			    <img src="/assets/mexcodeLogo.png" alt="Mexic0de-Logo" />
+			    <img src="/assets/mexcodeLogo.png" alt="Mexic0de-Logo" width="100%" height="100%" />
 	   </div>
 	   <div class="txt-center">
         <h2>¿Qué es MEXIC0DE?</h2>  
@@ -54,8 +54,7 @@ import Wrapper from "../components/Wrapper.astro";
   
 </Layout>
 
-<style>
-  
+<style> 
 .parallax {
 	background: #caf6dc;
     position: relative;
