--- a/src/pages/integrantes.astro
+++ b/src/pages/integrantes.astro
@@ -29,7 +29,7 @@ import Temo from "../../public/assets/Temo.jpg";
         </div>
 
         <div class="contact">
-            <a href="#">Ver portafolio</a>
+            <a href="/jaam">Ver portafolio</a>
         </div>
     </div>
 
