--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -11,7 +11,7 @@ const { href, title, body } = Astro.props;
 <div class="card">
   <div class="face face1">
     <div class="content">
-      <img src={href} />
+      <img src={href} alt="icono-web" width="100%" height="100%"/>
       <h3>{title}</h3>
     </div>
   </div>
