--- a/src/pages/integrantes.astro
+++ b/src/pages/integrantes.astro
@@ -1,15 +1,238 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Chepe from "../../public/assets/Chepe.jpg";
+import Mario from "../../public/assets/Mario.jpg";
+import Senuez from "../../public/assets/Senuez.jpg";
+import Kike from "../../public/assets/Kike.jpg";
+import Temo from "../../public/assets/Temo.jpg";
 /* Aqui se importa los componentes si es que usan */
 ---
 
 <Layout title="Integrantes">
   <!-- Dentro de este Layout va su html -->
-  <h1>Integrantes</h1>
+  
+  <body>
+  
+    <div class="card">
+        <div class="head">
+            <div class="circle"></div>
+            <div class="img">
+                <img src={Chepe} alt="">
+            </div>
+        </div>
+
+        <div class="description">
+            <h3>José Angel Arjona</h3>
+            <h4>Lider del proyecto</h4>
+            <p>Creador de Policard y UPWorks</p>
+            <p>Tiene un pene de 7 pulgadas y lo pretenden 5 morras</p>
+        </div>
+
+        <div class="contact">
+            <a href="/jaam">Ver portafolio</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="head">
+            <div class="circle"></div>
+            <div class="img">
+                <img src={Mario} alt="">
+            </div>
+        </div>
+
+        <div class="description">
+            <h3>Mario Alejandra</h3>
+            <h4>Pajaro Mensajero</h4>
+            <p>Campeón del mundo en el torneo de chupar penes a señores de 50 y más</p>
+            <p>Fan de la verguita de dama</p>
+        </div>
+
+        <div class="contact">
+            <a href="#">Ver portafolio</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="head">
+            <div class="circle"></div>
+            <div class="img">
+                <img src={Temo} alt="">
+            </div>
+        </div>
+
+        <div class="description">
+            <h3>Edu Flores</h3>
+            <h4>Prostituta nacional</h4>
+            <p>Hola belinda, te amo pero tengo que seguir.</p>
+            <p>Experiencia en destrozar cucas</p>
+        </div>
+
+        <div class="contact">
+            <a href="#">Ver portafolio</a>
+        </div>
+    </div>
+
+    <div class="card">
+      <div class="head">
+          <div class="circle"></div>
+          <div class="img">
+              <img src={Senuez} alt="">
+          </div>
+      </div>
+
+      <div class="description">
+          <h3>Cesar Zepeda</h3>
+          <h4>Fabrica de Tamal</h4>
+          <p>Experto mundial en analizar cucas</p>
+          <p>Barba de benzama y pene de CR7</p>
+      </div>
+
+      <div class="contact">
+          <a href="#">Ver portafolio</a>
+      </div>
+  </div>
+
+  <div class="card">
+    <div class="head">
+        <div class="circle"></div>
+        <div class="img">
+            <img src={Kike} alt="">
+        </div>
+    </div>
+
+    <div class="description">
+        <h3>Enrique Armenta</h3>
+        <h4>Prostituta nacional</h4>
+        <p>Analizador de penes en masa venal</p>
+        <p>En un compromiso dile que hay pene y va</p>
+    </div>
+
+    <div class="contact">
+        <a href="#">Ver portafolio</a>
+    </div>
+</div>
+
+    
+</body>
+    
+  
 </Layout>
 
 <style>
   /* Aqui va el css */
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Library 3 am', cursive;
+}
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: #10372a;
+    flex-wrap: wrap;
+}
+
+.card {
+    position: relative;
+    width: 300px;
+    height: 400px;
+    background: #0b1929;
+    border-radius: 5px;
+    overflow: hidden;
+    transition: .5s;
+    margin: 15px 20px;
+}
+
+.card:hover {
+    box-shadow: 0 5px 15px rgba(220, 229, 230, 0.5);
+    transform: translateY(-15px);
+}
+
+.card .head {
+    height: 125px;
+    width: 100%;
+    position: relative;
+}
+
+.card .head .circle {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    background: #fccf4c;
+    bottom: 0;
+}
+
+.card .head .img {
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    background: #fff;
+    padding: 5px;
+    border-radius: 50%;
+    bottom: -30%;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+.card .head .img img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+
+.card .description {
+    height: 200px;
+    padding: 40px 20px 20px 20px;
+    border-bottom: solid 1px rgba(236, 238, 238, 0.18);
+    text-align: center;
+}
+
+.card .description h3 {
+    color: #fffbec;
+}
+
+.card .description h4 {
+    color: #fccf4c;
+}
+
+.card .description p {
+    margin-top: 20px;
+    font-size: 15px;
+    color: #fffbec;
+}
+
+
+.card .contact {
+    width: 100%;
+    height: 75px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card .contact a {
+    text-decoration: none;
+    color: #fff;
+    background: #10372a;
+    padding: 5px 20px;
+    border-radius: 5px;
+    transition: .3s;
+}
+
+.card .contact a:hover {
+    
+    background: #fccf4c;
+   
+}
+  
 </style>
 
 <script>
