--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,6 +32,9 @@
 html {
     font-family: var(--font);
 }
+h1,h2,h3,h4,h5,h6{
+    font-family: var(--font2);
+}
 code {
     font-family: var(--CodeFont)
 }
