fix scroll infinito

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,10 +44,10 @@ import "../styles/global.css";
 
 <style>
   body {
-    min-height: calc(100vh + 400px);
+    min-height: calc(100vh + 400px) !important;
     overflow-x: hidden;
     overflow-y: scroll;
-    background-color: var(--light);
+    background-color: var(--green);
   }
   /* Loader css */
   #content {
