--- a/src/layouts/Folio.astro
+++ b/src/layouts/Folio.astro
@@ -50,6 +50,9 @@ import "../styles/global.css";
   body {
     background-color: var(--green);
     color: var(--light);
+    overflow: auto;
+    scroll-snap-type: y mandatory;
+    
   }
   /*  body {
     min-height: calc(100vh + 400px);
