--- a/src/pages/jaam.astro
+++ b/src/pages/jaam.astro
@@ -1,5 +1,7 @@
 ---
 import Folio from "../layouts/Folio.astro";
+import ContactCard from "../components/ContactCard.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Folio title="Jose Angel Arjona Matheis">
@@ -27,10 +29,10 @@ import Folio from "../layouts/Folio.astro";
     </div>
   </section>
   <section class="edu">
-    <h2>Educación</h2>
+    <h2 class="heading">Educación</h2>
     <div class="edu-row">
       <div class="edu-col">
-        <h3>Educación</h3>
+        <h3 class="title">Formación</h3>
         <div class="edu-box">
           <div class="edu-cont">
             <div class="content">
@@ -65,12 +67,78 @@ import Folio from "../layouts/Folio.astro";
     </div>
   </section>
   <!-- Skills -->
+  <section class="skills">
+    <h2 class="heading">Skills</h2>
+    <div class="skills-row">
+      <div class="skills-col">
+        <h3 class="title">Code</h3>
+        <div class="skills-box">
+          <div class="skills-content">
+            <div class="progress">
+              <h4>HTML <span>95%</span></h4>
+              <div class="bar"><span></span></div>
+            </div>
+            <div class="progress">
+              <h4>CSS <span>75%</span></h4>
+              <div class="bar"><span></span></div>
+            </div>
+            <div class="progress">
+              <h4>JS <span>70%</span></h4>
+              <div class="bar"><span></span></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="skills-col">
+        <h3 class="title">Hablidades</h3>
+        <div class="skills-box">
+          <div class="skills-content">
+            <div class="progress">
+              <h4>Diseño Web <span>75%</span></h4>
+              <div class="bar"><span></span></div>
+            </div>
+            <div class="progress">
+              <h4>Desarrollo Web (Apps) <span>72%</span></h4>
+              <div class="bar"><span></span></div>
+            </div>
+            <div class="progress">
+              <h4>Diseño Grafico y Marketing<span>50%</span></h4>
+              <div class="bar"><span></span></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="contact" id="contact">
+    <h2 class="heading">Contacto</h2>
+    <ContactCard
+      pic=""
+      name="TuNombre"
+      role="Front-end"
+      numJobs="5"
+      address="correo@gmail.com"
+    />
+  </section>
+
+  <Footer />
 </Folio>
 
 <style>
   section {
     min-height: 100vh;
     padding: 10rem 9% 2rem;
+    scroll-snap-align: start;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+  }
+
+  section.show {
+    opacity: 1;
+  }
+
+  span {
+    color: var(--primary);
   }
   .hero {
     display: flex;
@@ -215,10 +283,11 @@ import Folio from "../layouts/Folio.astro";
     padding-bottom: 5rem;
   }
 
-  .edu h2 {
-    font-size: 3rem;
+  .heading {
+    font-size: 3.5rem;
     font-weight: 700;
     margin-bottom: 2rem;
+    text-align: center;
     color: var(--light);
   }
   .edu-row {
@@ -231,7 +300,7 @@ import Folio from "../layouts/Folio.astro";
     flex: 1 1 40rem;
   }
 
-  .edu-col h3 {
+  .title {
     font-size: 2.5rem;
     font-weight: 700;
     margin: 0 0 1.5rem 2rem;
@@ -292,4 +361,125 @@ import Folio from "../layouts/Folio.astro";
   .content p {
     font-size: 1.7rem;
   }
+
+  .skills {
+    min-height: auto;
+    padding-bottom: 7rem;
+    background: #56f09e0c;
+  }
+
+  .skills .skills-row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem;
+  }
+
+  .skills-row .skills-col {
+    flex: 1 1 40rem;
+  }
+
+  .skills-box .skills-content {
+    position: relative;
+    border: 0.2rem solid var(--primary);
+    border-radius: 0.6rem;
+    padding: 0.5rem 1.5rem;
+    z-index: 1;
+    overflow: hidden;
+  }
+
+  .skills-box .skills-content::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background-color: var(--green);
+    z-index: -1;
+    transition: 0.6s;
+  }
+
+  .skills-box .skills-content:hover::before {
+    width: 100%;
+  }
+  .skills-content .progress {
+    padding: 1rem 0;
+  }
+
+  .skills-content h4 {
+    font-size: 1.7rem;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .skills-content h4 span {
+    color: var(--light);
+  }
+
+  .skills-content .bar {
+    position: relative;
+    width: 100%;
+    height: 1rem;
+    background-color: var(--primary);
+    margin: 0.5rem;
+    border-radius: 0.5rem;
+  }
+
+  /* HTML */
+  .skills-col:nth-child(1) .skills-content .progress:nth-child(1) .bar {
+    width: 95%;
+  }
+
+  /* CSS */
+  .skills-col:nth-child(1) .skills-content .progress:nth-child(2) .bar {
+    width: 75%;
+  }
+  /* JS */
+  .skills-col:nth-child(1) .skills-content .progress:nth-child(3) .bar {
+    width: 70%;
+  }
+
+  /* DW */
+  .skills-col:nth-child(2) .skills-content .progress:nth-child(1) .bar {
+    width: 75%;
+  }
+
+  /* DWAPP */
+  .skills-col:nth-child(2) .skills-content .progress:nth-child(2) .bar {
+    width: 72%;
+  }
+  /* DG */
+  .skills-col:nth-child(2) .skills-content .progress:nth-child(3) .bar {
+    width: 50%;
+  }
+
+  .contact {
+    min-height: auto;
+    padding-bottom: 15rem;
+  }
+
+  /* ANIMATE SCROLL*/
 </style>
+
+<script is:inline>
+  const sections = document.querySelectorAll("section");
+
+  function showSections() {
+    sections.forEach((section) => {
+      const sectionTop = section.offsetTop;
+      const sectionHeight = section.clientHeight;
+      const windowHeight = window.innerHeight;
+
+      if (window.pageYOffset > sectionTop - windowHeight + sectionHeight / 2) {
+        section.classList.add("show");
+      } else {
+        section.classList.remove("show");
+      }
+    });
+  }
+
+  window.addEventListener("scroll", showSections);
+  window.addEventListener("resize", showSections);
+
+  showSections();
+</script>
