--- a/src/components/ContactCard.astro
+++ b/src/components/ContactCard.astro
@@ -36,13 +36,13 @@ const { pic, name, role, numJobs, address } = Astro.props;
   .card {
     max-width: 520px;
     border-radius: 1rem;
-    background-color: #133f2f;
+    background-color: var(--green);
     padding: 2rem;
     margin: auto;
   }
 
   .card:hover {
-    background-color: #0d2b1f;
+    background-color: #133f2f;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   }
 
