--- a/src/pages/integrantes.astro
+++ b/src/pages/integrantes.astro
@@ -5,6 +5,8 @@ import Mario from "../../public/assets/Mario.jpg";
 import Senuez from "../../public/assets/Senuez.jpg";
 import Kike from "../../public/assets/Kike.jpg";
 import Temo from "../../public/assets/Temo.jpg";
+import mountain from "../../public/assets/mountain.png"
+import Wrapper from "../components/Wrapper.astro";
 /* Aqui se importa los componentes si es que usan */
 ---
 
@@ -13,105 +15,170 @@ import Temo from "../../public/assets/Temo.jpg";
   
   <body>
   
-    <div class="card">
-        <div class="head">
-            <div class="circle"></div>
-            <div class="img">
-                <img src={Chepe} alt="">
-            </div>
-        </div>
+    <section class="parallax">
+        <img src="/assets/mountain.svg" alt="mountain" id="mountain" />
+        <img src="/assets/hill.svg" alt="hill" id="hill" />
+        <img src="/assets/piramid.svg" alt="piramid" id="piramid" />
+        <img src="/assets/agave.svg" alt="agave" id="agave" />
+        <img src="/assets/mexRes.svg" alt="mexcode" id="bg-res"/>
+        <h1 id="mex">INTEGRANTES</h1>
+    </section>
+  
+    <section class="sec" id="start">
+        <Wrapper staticTxt="MEXIC0DE ES" one="Innovación" two="Creatividad" three="Desarrollo" four="un Equipo"/>
 
-        <div class="description">
-            <h3>José Angel Arjona</h3>
-            <h4>Lider del proyecto</h4>
-            <p>Creador de Policard y UPWorks</p>
-            <p>Tiene un pene de 7 pulgadas y lo pretenden 5 morras</p>
-        </div>
-
-        <div class="contact">
-            <a href="/jaam">Ver portafolio</a>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="head">
-            <div class="circle"></div>
-            <div class="img">
-                <img src={Mario} alt="">
-            </div>
-        </div>
-
-        <div class="description">
-            <h3>Mario Alejandra</h3>
-            <h4>Pajaro Mensajero</h4>
-            <p>Campeón del mundo en el torneo de chupar penes a señores de 50 y más</p>
-            <p>Fan de la verguita de dama</p>
-        </div>
-
-        <div class="contact">
-            <a href="#">Ver portafolio</a>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="head">
-            <div class="circle"></div>
-            <div class="img">
-                <img src={Temo} alt="">
-            </div>
-        </div>
-
-        <div class="description">
-            <h3>Edu Flores</h3>
-            <h4>Prostituta nacional</h4>
-            <p>Hola belinda, te amo pero tengo que seguir.</p>
-            <p>Experiencia en destrozar cucas</p>
-        </div>
-
-        <div class="contact">
-            <a href="#">Ver portafolio</a>
-        </div>
-    </div>
-
-    <div class="card">
-      <div class="head">
-          <div class="circle"></div>
-          <div class="img">
-              <img src={Senuez} alt="">
+        <div class="container">
+            <div class="grid col-3 md-col-2 sm-col-1">
+                <div class="card">
+                  <div class="card1">
+              <div class="head">
+                  <div class="circle"></div>
+                  <div class="img">
+                      <img src={Chepe} alt="">
+                  </div>
+              </div>
+      
+              <div class="description">
+                  <h3>José Angel Arjona</h3>
+                  <h4>Lider del proyecto</h4>
+                  <p>Creador de Policard y UPWorks</p>
+                  <p>Tiene un pene de 7 pulgadas y lo pretenden 5 morras</p>
+              </div>
+      
+              <div class="contact">
+                  <a href="/jaam">Ver portafolio</a>
+              </div>
           </div>
-      </div>
-
-      <div class="description">
-          <h3>Cesar Zepeda</h3>
-          <h4>Fabrica de Tamal</h4>
-          <p>Experto mundial en analizar cucas</p>
-          <p>Barba de benzama y pene de CR7</p>
-      </div>
-
-      <div class="contact">
-          <a href="#">Ver portafolio</a>
-      </div>
-  </div>
-
-  <div class="card">
-    <div class="head">
-        <div class="circle"></div>
-        <div class="img">
-            <img src={Kike} alt="">
+                </div>
+      
+      
+                <div class="card">
+                  <div class="card1">
+              <div class="head">
+                  <div class="circle"></div>
+                  <div class="img">
+                      <img src={Mario} alt="">
+                  </div>
+              </div>
+      
+              <div class="description">
+                  <h3>Mario Alejandra</h3>
+                  <h4>Pajaro Mensajero</h4>
+                  <p>Campeón del mundo en el torneo de chupar penes a señores de 50 y más</p>
+                  <p>Fan de la verguita de dama</p>
+              </div>
+      
+              <div class="contact">
+                  <a href="#">Ver portafolio</a>
+              </div>
+          </div>
+                </div>
+      
+      
+                <div class="card">
+                  <div class="card1">
+              <div class="head">
+                  <div class="circle"></div>
+                  <div class="img">
+                      <img src={Temo} alt="">
+                  </div>
+              </div>
+      
+              <div class="description">
+                  <h3>Edu Flores</h3>
+                  <h4>Prostituta nacional</h4>
+                  <p>Hola belinda, te amo pero tengo que seguir.</p>
+                  <p>Experiencia en destrozar cucas</p>
+              </div>
+      
+              <div class="contact">
+                  <a href="#">Ver portafolio</a>
+              </div>
+          </div>
+                </div>
+      
+      
+                <div class="card">
+                  <div class="card1">
+            <div class="head">
+                <div class="circle"></div>
+                <div class="img">
+                    <img src={Senuez} alt="">
+                </div>
+            </div>
+      
+            <div class="description">
+                <h3>Cesar Zepeda</h3>
+                <h4>Fabrica de Tamal</h4>
+                <p>Experto mundial en analizar cucas</p>
+                <p>Barba de benzama y pene de CR7</p>
+            </div>
+      
+            <div class="contact">
+                <a href="#">Ver portafolio</a>
+            </div>
         </div>
-    </div>
+      
+                </div>
+      
+      
+                <div class="card">
+                    <div class="card1">
+                        <div class="head">
+                            <div class="circle"></div>
+                            <div class="img">
+                                <img src={mountain} alt="">
+                            </div>
+                        </div>
+                
+                        <div class="description">
+                            <h3>PLAYLIST DE MEXIC0DE</h3>
+                            <h4>Canciones de los integrantes del equipo</h4>
+                            <p>Escuchar bajo su propio riesgo</p>
+                        </div>
+                
+                        <div class="contact">
+                            <a href="https://music.youtube.com/playlist?list=PL7ZwW-YGq8oZIc7yYBnn-pfq0AjqN7Vo3&feature=share">Ver portafolio</a>
+                        </div>
+                    </div>
 
-    <div class="description">
-        <h3>Enrique Armenta</h3>
-        <h4>Prostituta nacional</h4>
-        <p>Analizador de penes en masa venal</p>
-        <p>En un compromiso dile que hay pene y va</p>
-    </div>
+                </div>
+      
+      
+                <div class="card"><div class="card1">
+          <div class="head">
+              <div class="circle"></div>
+              <div class="img">
+                  <img src={Kike} alt="">
+              </div>
+          </div>
+      
+          <div class="description">
+              <h3>Enrique Armenta</h3>
+              <h4>Prostituta nacional</h4>
+              <p>Analizador de penes en masa venal</p>
+              <p>En un compromiso dile que hay pene y va</p>
+          </div>
+      
+          <div class="contact">
+              <a href="#">Ver portafolio</a>
+          </div>
+      </div></div>
+            </div>
+       </div>
+      
+    </section>
+  
+    
 
-    <div class="contact">
-        <a href="#">Ver portafolio</a>
-    </div>
-</div>
+    
+
+    
+
+    
+
+    
+  
 
     
 </body>
@@ -139,6 +206,17 @@ body {
 
 .card {
     position: relative;
+    width: 330px;
+    height: 450px;
+    
+    border-radius: 5px;
+    overflow: hidden;
+    transition: .5s;
+    
+}
+
+.card1 {
+    position: relative;
     width: 300px;
     height: 400px;
     background: #0b1929;
@@ -148,18 +226,18 @@ body {
     margin: 15px 20px;
 }
 
-.card:hover {
+.card1:hover {
     box-shadow: 0 5px 15px rgba(220, 229, 230, 0.5);
     transform: translateY(-15px);
 }
 
-.card .head {
+.card1 .head {
     height: 125px;
     width: 100%;
     position: relative;
 }
 
-.card .head .circle {
+.card1 .head .circle {
     position: absolute;
     width: 300px;
     height: 300px;
@@ -168,7 +246,7 @@ body {
     bottom: 0;
 }
 
-.card .head .img {
+.card1 .head .img {
     width: 150px;
     height: 150px;
     position: absolute;
@@ -180,7 +258,7 @@ body {
     transform: translate(-50%);
 }
 
-.card .head .img img {
+.card1 .head .img img {
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -188,29 +266,29 @@ body {
 }
 
 
-.card .description {
+.card1 .description {
     height: 200px;
     padding: 40px 20px 20px 20px;
     border-bottom: solid 1px rgba(236, 238, 238, 0.18);
     text-align: center;
 }
 
-.card .description h3 {
+.card1 .description h3 {
     color: #fffbec;
 }
 
-.card .description h4 {
+.card1 .description h4 {
     color: #fccf4c;
 }
 
-.card .description p {
+.card1 .description p {
     margin-top: 20px;
     font-size: 15px;
     color: #fffbec;
 }
 
 
-.card .contact {
+.card1 .contact {
     width: 100%;
     height: 75px;
     display: flex;
@@ -218,7 +296,7 @@ body {
     justify-content: center;
 }
 
-.card .contact a {
+.card1 .contact a {
     text-decoration: none;
     color: #fff;
     background: #10372a;
@@ -227,14 +305,98 @@ body {
     transition: .3s;
 }
 
-.card .contact a:hover {
+.card1 .contact a:hover {
     
     background: #fccf4c;
    
 }
+
+.parallax {
+	background: #caf6dc;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+#mex {
+	color: var(--light);
+  position: absolute;
+  font-weight: 900;
+  font-size: 6em;
+	font-family: var(--font2);
+	text-shadow:2px 2px 2px rgba(0,0,0,0.5);
+}
+
+#bg-res{
+	display: none;
+}
+
+.parallax img {
+	position: absolute;
+	top 0;
+	left 0;
+	width: 110%;
+	pointer-events: none;
+}
+
+.sec{
+	position: relative;
+	display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 400px;
+  padding-top: 100px;
+	background: var(--green);
+    
+}
+
+
+.sec p{
+	font-size: 1.5em;
+	color:#fff
+}
+
+/* Curved bg with plain CSS */
+.curve {
+  position: absolute;
+  height: 250px;
+  width: 100%;
+  bottom: 0;
+  text-align: center;
+}
+.curve::before {
+  content: '';
+  display: block;
+  position: absolute;
+  border-radius: 100% 50%;
+  width: 55%;
+  height: 100%;
+  transform: translate(85%, 60%);
+  background-color: hsl(216, 21%, 16%);
+}
+.curve::after {
+  content: '';
+  display: block;
+  position: absolute;
+  border-radius: 100% 50%;
+  width: 55%;
+  height: 100%;
+  background-color: #3c31dd;
+  transform: translate(-4%, 40%);
+  z-index: -1;
+}
+
+/* Line Separator */
+.separator{
+ 	position: relative;
+	width: 100%;
+	height: 2px;
+	background: var(--light);
+}
+
   
 </style>
 
-<script>
-  /* Aqui va el javascript, si no les funciona prueben usando <script:isinline> */
-</script>
+<script src = "../src/scripts/parallax.js" type="text/javascript"></script>
