--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 /* Aqui se importa los componentes si es que usan */
 import CardProyects from "../components/CardProyects.astro";
 import Banner from "../components/Banner.astro";
+import CardProyects2 from "../components/CardsProyects2.astro";
 
 ---
 
@@ -93,6 +94,7 @@ import Banner from "../components/Banner.astro";
     ></script>
   </div>
 </Layout>
+<CardProyects2></CardProyects2>
 
 <style>
   /* Aqui va el css */
