--- a/src/layouts/Folio.astro
+++ b/src/layouts/Folio.astro
@@ -47,12 +47,14 @@ import "../styles/global.css";
 </html>
 
 <style>
+  html {
+    scroll-behavior: smooth;
+  }
   body {
     background-color: var(--green);
     color: var(--light);
     overflow: auto;
     scroll-snap-type: y mandatory;
-    
   }
   /*  body {
     min-height: calc(100vh + 400px);
