--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -1,131 +1,143 @@
 ---
 import Layout from "../layouts/Layout.astro";
-/* Aqui se importa los componentes si es que usan */
-import CardProyects from "../components/CardProyects.astro";
-import Banner from "../components/Banner.astro";
-import CardProyects2 from "../components/CardsProyects2.astro";
-
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="Proyectos">
-  <header class="showcase">
-    <h2>Proyectos MEXIC0DE</h2>
-  </header>
-  <div class="container">
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
-      rel="stylesheet"
-    />
-    <!-- Dentro de este Layout va su html -->
-    <div class="grid col-3 md-col-2 sm-col-1">
-      <div>
-        <CardProyects
-          title="MEXIC0DE"
-          about="Sitio oficial de MEXIC0DE. Desarrollado con Astro, es el portafolio del grupo de desarroladores MEXIC0DE"
-          img="https://phx02pap002files.storage.live.com/y4mjCuSoDICUagL1hWYLfcFl9KKor_iqh-F9R2XBkBOMpJeZIyFzkpL6Jesfj2RShyW9SdTCUknfY790RtT0XZ3IjKMsWjc6AjrPVqCrSRbZ-DxUSGRxOup7oz3l6L98ymp75evxkeraixQM6Sapfd4-7mWp1lH3rdOd937OjPMxGMFnFaIubb31nU1BWtDPLqi?width=960&height=720&cropmode=none"
-          gh="https://github.com/MexicodeInc2023/Mexic0de.git"
-          pg="/"
-          extra={true}
-        />
-      </div>
-      <div>
-        <CardProyects
-          title="MEXIC0DE-TUTO"
-          about="Blog oficial de MEXIC0DE. Desarrollado con Astro, es un blog con articulos de tecnologia y tutoriales"
-          img="https://phx02pap002files.storage.live.com/y4mr61C7FG37u-v10hxod7SP01aZ-YJNM9eugip4SGgEBRFCaf2kL78K5aoAjxf_YuWJTX3vHYyHIG9qugUl0fwMKzJ93lM39MEg5IprbhZiKzb0hHt3FHsMGXW67Zv1GqVgIdbU1WWijI5GSAmYP_GSTu3MpFF423ean57vVGovEQZv3-cP4y7_Lt5QkNXIej3?width=1400&height=1050&cropmode=none"
-          gh="https://github.com/MexicodeInc2023/Mexic0deBlog.git"
-          pg="https://mexic0de-blog.vercel.app/"
-          extra={true}
-        />
-      </div>
-      <div>
-        <CardProyects
-          title="MEXIC0DE SEARCH"
-          about="Pagina de buscador personalizada. Desarrollado con Svelte, es un sitio que emula el sitio google.com y añade marcadores personalizables"
-          img="https://phx02pap002files.storage.live.com/y4mocD9BS-qHMd-T4NZwnxT9pkJ45hOUO5dnJ87c41cpe9VaD4FIBxZPXZMSNN4uyPLc0ff-E670qXzDZwPh27xA11q2MabvmBfG31ctKC0aoBuQiI4q6lO7hPSWpCVWggvrWtq7aQ41TsSWC8QEHD-GJyuBigYMhGljbQmPyFSD-10-4FFl5ohdtKEp1vxQr83?width=960&height=720&cropmode=none"
-          gh="https://github.com/MexicodeInc2023/Mexic0deSearch"
-          pg="https://mexcde-search.netlify.app/"
-          extra={true}
-        />
-      </div>
-      
-      <div>
-        <CardProyects
-          title="POLICARD"
-          about="Applicación Web para UPTAP. Desarrollado con Svelte, es una aplicación web que hace uso de una API-REST desarrollada con DJANGO; el objetivo es crear un sistema de credencialización para la Universidad"
-          img="https://phx02pap002files.storage.live.com/y4mEopybeAXZZINyATZFR2MKbM4sJ830NRvRw5MqO18qowWZgqK5RHUf47iuixBztBIkLmAV4KOg1x2mUUERxgRXVRlc18NVDtbmnKHc2sPNxTzyvsboV7X9m9FiZKrpTqSxbjfrhTF2XNxxGr14ZA2v3C4GNZ3G06jQRDJrzZUkBbi3S-6pTrGyuiWjceoQdis?width=960&height=720&cropmode=none"
-          gh=""
-          pg=""
-          extra={false}
-        />
+  <div>
+    <div class="card">
+      <img
+        class="cardImg"
+        src="https://phx02pap002files.storage.live.com/y4mjCuSoDICUagL1hWYLfcFl9KKor_iqh-F9R2XBkBOMpJeZIyFzkpL6Jesfj2RShyW9SdTCUknfY790RtT0XZ3IjKMsWjc6AjrPVqCrSRbZ-DxUSGRxOup7oz3l6L98ymp75evxkeraixQM6Sapfd4-7mWp1lH3rdOd937OjPMxGMFnFaIubb31nU1BWtDPLqi?width=960&height=720&cropmode=none"
+        alt="Mexic0de"
+      />
+      <div class="card-content">
+        <h2>Conoce Nuestros Proyectos!</h2>
+        <p>
+          Desliza para ver más <i class="bx bx-down-arrow-alt bx-fade-down"></i>
+        </p>
       </div>
     </div>
-    <Banner></Banner>
+    <div class="card">
+      <img
+        class="cardImg"
+        src="https://phx02pap002files.storage.live.com/y4mr61C7FG37u-v10hxod7SP01aZ-YJNM9eugip4SGgEBRFCaf2kL78K5aoAjxf_YuWJTX3vHYyHIG9qugUl0fwMKzJ93lM39MEg5IprbhZiKzb0hHt3FHsMGXW67Zv1GqVgIdbU1WWijI5GSAmYP_GSTu3MpFF423ean57vVGovEQZv3-cP4y7_Lt5QkNXIej3?width=1400&height=1050&cropmode=none"
+        alt="Mexic0de"
+      />
+      <div class="card-content">
+        <h2>MEXIC0DE-TUTO</h2>
+        <p>
+          Blog oficial de MEXIC0DE. Desarrollado con Astro, es un blog con
+          articulos de tecnologia y tutoriales
+        </p>
+        <div class="btnContainer">
+          <a
+            href="https://github.com/MexicodeInc2023/Mexic0deBlog.git"
+            class="github-button"
+            target="_blank"
+          >
+            GitHub
+          </a>
+          <a
+            href="https://mexic0de-blog.vercel.app/"
+            class="other-button"
+            target="_blank"
+          >
+            Pagina Web
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <img
+        class="cardImg"
+        src="https://phx02pap002files.storage.live.com/y4mocD9BS-qHMd-T4NZwnxT9pkJ45hOUO5dnJ87c41cpe9VaD4FIBxZPXZMSNN4uyPLc0ff-E670qXzDZwPh27xA11q2MabvmBfG31ctKC0aoBuQiI4q6lO7hPSWpCVWggvrWtq7aQ41TsSWC8QEHD-GJyuBigYMhGljbQmPyFSD-10-4FFl5ohdtKEp1vxQr83?width=960&height=720&cropmode=none"
+        alt="Mexic0de-Search"
+      />
+      <div class="card-content">
+        <h2>MEXIC0DE-SEARCH</h2>
+        <p>
+          Pagina de buscador personalizada. Desarrollado con Svelte, es un sitio
+          que emula el sitio google.com y añade marcadores personalizables
+        </p>
+        <div class="btnContainer">
+          <a
+            href="https://github.com/MexicodeInc2023/Mexic0deSearch"
+            class="github-button"
+            target="_blank"
+          >
+            GitHub
+          </a>
+          <a
+            href="https://mexcde-search.netlify.app/"
+            class="other-button"
+            target="_blank"
+          >
+            Pagina Web
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <img
+        class="cardImg"
+        src="https://phx02pap002files.storage.live.com/y4mEopybeAXZZINyATZFR2MKbM4sJ830NRvRw5MqO18qowWZgqK5RHUf47iuixBztBIkLmAV4KOg1x2mUUERxgRXVRlc18NVDtbmnKHc2sPNxTzyvsboV7X9m9FiZKrpTqSxbjfrhTF2XNxxGr14ZA2v3C4GNZ3G06jQRDJrzZUkBbi3S-6pTrGyuiWjceoQdis?width=960&height=720&cropmode=none"
+        alt="Policard"
+      />
+      <div class="card-content">
+        <h2>MEXIC0DE-TUTO</h2>
+        <p>
+          Blog oficial de MEXIC0DE. Desarrollado con Astro, es un blog con
+          articulos de tecnologia y tutoriales
+        </p>
+        <div class="btnContainer">
+          <p style="color:#6e7075">Por el momento no se puede mostrar.</p>
+          <!-- <a
+            href="https://github.com/MexicodeInc2023/Mexic0deBlog.git"
+            class="github-button"
+            target="_blank"
+          >
+            GitHub
+          </a>
+          <a
+            href="https://mexic0de-blog.vercel.app/"
+            class="other-button"
+            target="_blank"
+          >
+            Pagina Web
+          </a> -->
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="logo-container">
-    <img
-      src="https://img.icons8.com/color/144/000000/html-5--v1.png"
-      alt="HTML logo"
-      class="logo"
-    />
-    <img
-      src="https://img.icons8.com/color/144/000000/css3.png"
-      alt="CSS logo"
-      class="logo"
-    />
-    <img
-      src="https://img.icons8.com/color/144/000000/javascript--v1.png"
-      alt="JavaScript logo"
-      class="logo"
-    />
-    <img
-      src="https://dsm01pap009files.storage.live.com/y4miQ8OYKRqr5mKfIuysRA0fXIXfy1B76J9ceesxRGX6CLP1gLWunds-NglJ0s2iGKfKI8co2hUd4hTje68J3kq1fuaBQiFD5byQyH2ew3q604nXzX4ATAg2od5vw3qP7SRQX2Mk9Qew9hvfOu_R908Lw1LuSgPrRc5aHJakRNHFb_52DZsqnpE3yUnwhiwrXK_?width=126&height=150&cropmode=none"
-      alt="Astro logo"
-      class="logo"
-    />
-    <img
-      src="https://dsm01pap009files.storage.live.com/y4mflWmB9wD3uWWT67oDBVF6wXFjbJCKSpua3bKjKddaA1KB6isyzKmogkcB43OOFwgx0xLDJeckSMRbB7eUaVU8bBENy80Prhs3TYHa_jRaDD0QKHjO6C2EArpR9JY3KMuaPKc6zWNfa67ZFinlZGBZMJNADTdGuFrqsd8Cnmm7vTdGRnZyylvC-s5oBlWvN8M?width=510&height=690&cropmode=none"
-      class="logo"
-      alt="Svelte logo"
-    />
-    
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-    ></script>
-  </div>
+  <Footer />
 </Layout>
-<CardProyects2></CardProyects2>
 
 <style>
-  /* Aqui va el css */
   * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
   body {
-    background: #10372a;
-    font-size: px;
+    overflow-x: hidden;
   }
-  /* SHOWCASE */
-
-  .btn {
-    cursor: pointer;
-    display: inline-block;
-    border: 0;
-    font-weight: bold;
-    padding: 10px 20px;
-    background: #262626;
-    color: #fff;
-    font-size: 15px;
-    border: 1px solid #fff;
+  body::-webkit-scrollbar {
+    width: 0.5em;
+    background-color: #000000;
   }
 
-  .btn:hover {
-    opacity: 0.9;
+  body::-webkit-scrollbar-thumb {
+    background-color: #000000;
   }
 
-  .showcase {
+  h2 {
+    font-size: 5rem;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+
+  .header {
     width: 100%;
     height: 550px;
     background: url("./assets/mountain.png") no-repeat center center/cover;
@@ -139,209 +151,89 @@ import CardProyects2 from "../components/CardsProyects2.astro";
     color: #fff;
   }
 
-  .showcase h2,
-  .showcase p {
-    margin-bottom: 10px;
-  }
-
-  .showcase .btn {
-    margin-top: 20px;
-  }
-  .logo-container {
-    display: flex;
-    margin: 0 auto;
-    display: d-flex;
-    justify-content: center;
-    gap: 35px;
-  }
-  .logo {
-    width: 100px;
-    height: 100px;
-    max-width: 100px;
-    transition: transform 0.5s ease-in-out;
-    
-  }
-  .logo:hover {
-    transform: scale(1.2) rotate(360deg);
-  }
-
-  /* News Cards */
-  .news-cards {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap: 25px;
-    margin: 70px 0;
-  }
-  .news-cards h3 {
-    font-size: 20px;
-    margin: 10px 0;
-    color: #fff;
-  }
-
-  .news-cards a {
-    padding: 10px 0;
-    color: #f2f2f2;
-    text-transform: uppercase;
-    display: inline-block;
-    font-weight: bold;
-  }
-  .texto {
-    color: #f2f2f2;
-  }
-  /* CARDS BANNER ONE */
-
-
-  .cards-banner-one p,
-  .cards-banner-two p {
-    margin: 10px 0 20px 0;
-  }
-
-  /* CARDS BANNER TWO*/
-
-  .cards-banner-two {
-    width: 100%;
-    height: 350px;
-    background: url("./img/image-five.jpg") no-repeat center center/cover;
-  }
-
-  .cards-banner-two .content {
-    width: 50%;
-    padding: 100px 0 0 30px;
-  }
-
-  /* Follow */
-  .social {
-    margin: 50px;
-  }
-  .social p {
-    text-align: center;
-    font-size: 30px;
-    margin-bottom: 20px;
-  }
-  .links {
+  .card {
+    width: 100vw;
+    height: 100vh;
+    background: rgb(20, 50, 100, 0.8);
+    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: sticky;
+    top: 0;
   }
 
-  .links a {
-    margin: 0 30px;
+  .card img {
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(0.5) blur(2px);
   }
 
-  .links a i {
-    font-size: 3rem;
-  }
-
-  /* Links */
-  .footer-links {
-    background: #2f3640;
-    color: #616161;
-    font-size: 12px;
-    padding: 35px 0;
-  }
-
-  .footer-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-    align-items: flex-start;
+  .card-content {
+    position: absolute;
+    z-index: 2;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    background: rgba(0, 0, 0, 0.5);
+  }
+  .btnContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    gap: 40px;
   }
 
-  .footer-container ul {
-    margin: 0 auto;
+  .github-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 20px;
+    border-radius: 33px;
+    border: 1px solid #fff;
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-weight: 700;
+    transition: all 0.3s ease;
   }
 
-  .footer-links li {
-    line-height: 2.8;
+  .github-button:hover {
+    background-color: #fff;
+    color: #000;
   }
 
-  .footer {
-    background: #2f3640;
-    color: #616161;
-    font-size: 12px;
-    padding: 20px 0;
-    text-align: center;
-    font-size: 1rem;
-    padding-bottom: 20px;
+  .other-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 20px;
+    border-radius: 33px;
+    border: 1px solid #56f09f;
+    background-color: #56f09f;
+    color: #000;
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-weight: 700;
+    transition: all 0.3s ease;
   }
 
-  /* Mobil */
-  @media (max-width: 700px) {
-    .menu-btn {
-      display: block;
-    }
-
-    .menu-btn:hover {
-      opacity: 0.5;
-    }
-
-    .nav-main ul.nav-menu {
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      background: #2f3640;
-      width: 50%;
-      height: 100%;
-      border-right: #ccc 1px solid;
-      opacity: 0.9;
-      padding: 30px;
-      transform: translateX(-500px);
-      transition: transform 0.5s ease-in-out;
-    }
-
-    .nav-main ul.nav-menu li {
-      padding: 20px;
-      border-bottom: #ccc solid 1px;
-      font-size: 14px;
-    }
-    .nav-main ul.nav-menu li:last-child {
-      border-bottom: 0;
-    }
-
-    .nav-main ul.nav-menu.show {
-      transform: translateX(-20px);
-    }
-
-    .nav-main ul.nav-menu-right {
-      margin-right: 50px;
-    }
-
-    .news-cards {
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    .cards-banner-one .content,
-    .cards-banner-two .content {
-      width: 80%;
-    }
-
-    .footer-links .footer-container {
-      grid-template-columns: repeat(2, 1fr);
-    }
-  }
-
-  @media (max-width: 500px) {
-    .news-cards {
-      grid-template-columns: 1fr;
-    }
-
-    .cards-banner-one .content,
-    .cards-banner-two .content {
-      width: 100%;
-      padding: 60px 20px;
-    }
-    .footer-links .footer-container {
-      grid-template-columns: 1fr;
-    }
-
-    .footer-links .footer-container ul {
-      text-align: center;
-    }
+  .other-button:hover {
+    background-color: transparent;
+    color: #fff;
   }
 </style>
-
-<script>
-  /* Aqui va el javascript, si no les funciona prueben usando <script:isinline> */
-</script>
