Correcion de ortografia

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,13 +34,13 @@ import Wrapper from "../components/Wrapper.astro";
     <Wrapper staticTxt="¿Que Hacemos?" one="Paginas Web" two="Aplicaciones Web" three="Landings Pages" four="Software de Calidad" />
     <div >
       <div class="grid col-3 md-col-1 sm-col-1">
-        <Card title="Aplicaciones Web" body="Desarrollamos sistemas webs que ayuden a resolver un problema" href="https://cdn-icons-png.flaticon.com/512/8004/8004045.png"/>
-        <Card title="Landing Pages" body="Creamos Landing Pages atractivas y con buen manejo de SEO para destacar tu negocio" href="https://cdn-icons-png.flaticon.com/512/10081/10081895.png"/>
-        <Card title="Paginas Web" body="Construimos paginas webs completas para negocios y clientes personales" href="https://cdn-icons-png.flaticon.com/512/699/699931.png"/>
+        <Card title="Aplicaciones Web" body="Desarrollamos sistemas webs dedicados a lo que se necesiten" href="https://cdn-icons-png.flaticon.com/512/8004/8004045.png"/>
+        <Card title="Landing Pages" body="Creamos Landing Pages atractivas, con buen manejo de SEO para destacar tu negocio" href="https://cdn-icons-png.flaticon.com/512/10081/10081895.png"/>
+        <Card title="Paginas Web" body="Construimos páginas webs completas para negocios y clientes personales" href="https://cdn-icons-png.flaticon.com/512/699/699931.png"/>
      </div>
     </div>
     <div class="container" >
-      <h3 class="txt-center">Trabajamos con las tecnologias más modernas e interesantes!</h3>
+      <h3 class="txt-center">Trabajamos con tecnologias más modernas e interesantes!</h3>
       <br><br><br>
       <div>
       <SliderLogo />
