--- a/src/pages/integrantes.astro
+++ b/src/pages/integrantes.astro
@@ -87,7 +87,7 @@ import Wrapper from "../components/Wrapper.astro";
               <div class="description">
                   <h3>Edu Flores</h3>
                   <h4>Prostituta nacional</h4>
-                  <p>Hola belinda, te amo pero tengo que seguir.</p>
+                  <p>Hola Arilet, te amo pero tengo que seguir.</p>
                   <p>Experiencia en destrozar cucas</p>
               </div>
       
